fixes dark mode paragraph color

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ p {
   padding-bottom: 3px;
   font-size: 1.25em;
   font-family: 'Muli';
+  color: var(--base-color);
 }
 
 .card-text > p {
